--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <p class="title-image">THE GRID</p>
         </div>
 
-        <div class="content last-mobile col-sm-3">
+        <div class="content col-sm-3">
           <img class="image" src="images\desktop\image-fisheye.jpg" alt="">
           <img class="mobile" src="images\mobile\image-fisheye.jpg" alt="">
           <p class="title-image">MAKE IT FISHEYE</p>
