--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="images\favicon-32x32.png">
+  <link rel="icon" href="images/favicon-32x32.png">
   <title>Frontend Mentor | Loop Studio</title>
 
   <!-- font-google -->
@@ -28,10 +28,10 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="images\logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="images/logo.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <img class="burger" src="images\icon-hamburger.svg" alt="">
-          <img class="close" src="images\icon-close.svg" alt="">
+          <img class="burger" src="images/icon-hamburger.svg" alt="">
+          <img class="close" src="images/icon-close.svg" alt="">
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
           <ul class="navbar-nav list">
@@ -61,7 +61,7 @@
   </div>
 
   <div class="" id="container-two">
-    <img class="interactive-img" src="images\desktop\image-interactive.jpg" alt="">
+    <img class="interactive-img" src="images/desktop/image-interactive.jpg" alt="">
     <div class="interactive-desc">
       <h2 class="leader">THE LEADER IN INTERACTIVE VR</h2>
       <p class="leader-desc">Founded in 2011, Loopstudios has been producing world-class virtual reality
@@ -81,50 +81,50 @@
     <div class="container images-list">
       <div class="row">
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-deep-earth.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-deep-earth.jpg" alt="">
+          <img class="image" src="images/desktop/image-deep-earth.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-deep-earth.jpg" alt="">
           <p class="title-image">DEEP EARTH</p>
         </div>
 
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-from-above.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-from-above.jpg" alt="">
+          <img class="image" src="images/desktop/image-from-above.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-from-above.jpg" alt="">
           <p class="title-image">FROM UP ABOVE VR</p>
         </div>
 
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-night-arcade.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-night-arcade.jpg" alt="">
+          <img class="image" src="images/desktop/image-night-arcade.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-night-arcade.jpg" alt="">
           <p class="title-image">NIGHT ARCADE</p>
         </div>
 
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-pocket-borealis.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-pocket-borealis.jpg" alt="">
+          <img class="image" src="images/desktop/image-pocket-borealis.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-pocket-borealis.jpg" alt="">
           <p class="title-image">POCKET BOREALIS</p>
         </div>
 
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-soccer-team.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-soccer-team.jpg" alt="">
+          <img class="image" src="images/desktop/image-soccer-team.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-soccer-team.jpg" alt="">
           <p class="title-image">SOCCER TEAM</p>
         </div>
 
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-curiosity.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-curiosity.jpg" alt="">
+          <img class="image" src="images/desktop/image-curiosity.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-curiosity.jpg" alt="">
           <p class="title-image">THE CURIOSITY</p>
         </div>
 
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-grid.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-grid.jpg" alt="">
+          <img class="image" src="images/desktop/image-grid.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-grid.jpg" alt="">
           <p class="title-image">THE GRID</p>
         </div>
 
         <div class="content col-sm-3">
-          <img class="image" src="images\desktop\image-fisheye.jpg" alt="">
-          <img class="mobile" src="images\mobile\image-fisheye.jpg" alt="">
+          <img class="image" src="images/desktop/image-fisheye.jpg" alt="">
+          <img class="mobile" src="images/mobile/image-fisheye.jpg" alt="">
           <p class="title-image">MAKE IT FISHEYE</p>
         </div>
       </div>
@@ -137,7 +137,7 @@
     <div class="row gx-5">
       <div class="col">
         <div class="bottom-title pt-4">
-          <a class="navbar-brand navbar-light" href="#"> <img src="images\logo.svg" alt=""> </a>
+          <a class="navbar-brand navbar-light" href="#"> <img src="images/logo.svg" alt=""> </a>
         </div>
 
         <div class="b-link navbar-expand-lg" id="navbarNav">
